# cados_api1

./: pyproject.toml  requirements.txt
base/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_company.py  0003_advocate_company.py  0004_alter_advocate_company.py  0005_rename_name_company_company.py  0006_auto_20231231_0903.py  0007_auto_20231231_0904.py  0008_auto_20231231_0908.py  0009_auto_20231231_0913.py  0010_profile.py  0011_advocate_proflepic_advocate_user.py  0012_remove_advocate_proflepic_remove_advocate_user_and_more.py  0013_advocate_proflepic.py  0014_rename_proflepic_profile_profilepic_and_more.py  0015_remove_advocate_company_advocates.py  0016_rename_advocates_advocates_advocate.py  0017_rename_advocates_advocateall.py  0018_remove_advocateall_advocate_advocateall_advocates.py  0019_remove_advocateall_company_advocate_company.py  0020_remove_advocate_company_advocateall_company.py  0021_remove_advocateall_company_advocate_company.py  0022_advocateall_company.py  0023_remove_advocateall_company.py  0024_advocateall_company.py  0025_remove_advocateall_company.py  0026_advocateall_company.py  0027_remove_advocateall_company.py  0028_alter_advocate_company_alter_advocateall_advocates.py  0029_alter_advocate_company_alter_advocateall_advocates.py  0030_rename_advocates_advocateall_advocate.py  0031_rename_advocate_advocateall_advocates.py  0032_alter_advocate_company.py  0033_remove_profile_advocate_advocateprofile.py  0034_alter_profile_profilepic.py  (+4 more)
cados_api/: .env  settings.py  urls.py
